--- a/src/stories/button.css
+++ b/src/stories/button.css
@@ -9,7 +9,7 @@
 }
 .storybook-button--primary {
   color: white;
-  background-color: red;
+  @apply bg-blue-400;
 }
 .storybook-button--secondary {
   color: #333;
@@ -25,6 +25,6 @@
   padding: 11px 20px;
 }
 .storybook-button--large {
-  font-size: 3rem;
+  font-size: 2rem;
   padding: 12px 24px;
 }
