added card component. Set canvas background to medium 500. With the change the white border on the button variant text was detected. Set to transperent

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -35,5 +35,5 @@
 }
 
 .button--variant-text {
-  @apply hover:bg-white border border-white hover:border-neutral-200 text-medium-900 focus:outline-none focus:ring-4 focus:ring-accent-200;
+  @apply hover:bg-white border border-transparent hover:border-neutral-200 text-medium-900 focus:outline-none focus:ring-4 focus:ring-accent-200;
 }
