Added Select component. Added loading to button and changed the border color in the secondary variant to medium instead of primary

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -5,6 +5,10 @@
   @apply opacity-50 cursor-not-allowed;
 }
 
+.button--loading {
+  @apply animate-pulse cursor-wait;
+}
+
 .button--xl {
   @apply py-2 px-4;
 }
@@ -31,7 +35,7 @@
   @apply shadow bg-white hover:bg-primary-500 text-medium-900 hover:text-white  focus:outline-none focus:ring-4 focus:ring-accent-200;
 }
 .button--variant-secondary {
-  @apply bg-white border border-neutral-100 hover:border-primary-500 text-medium-900 hover:text-primary-600 focus:outline-none focus:ring-4 focus:ring-accent-200;
+  @apply bg-white border border-neutral-100 hover:border-neutral-700 text-medium-900 hover:text-dark-500 focus:outline-none focus:ring-4 focus:ring-accent-200;
 }
 
 .button--variant-text {
