Added className to icon. Added variants to icon. Split the stories up in variants and default icon

--- a/src/components/Icon/Icon.css
+++ b/src/components/Icon/Icon.css
@@ -20,3 +20,16 @@
 .icon--xl {
   @apply text-xl leading-5;
 }
+
+.icon--primary {
+  @apply text-primary-500 hover:text-primary-700;
+}
+.icon--accent {
+  @apply text-accent-500 hover:text-accent-700;
+}
+.icon--medium {
+  @apply text-medium-800 hover:text-dark-500;
+}
+.icon--white {
+  @apply text-white hover:text-neutral-500;
+}
