--- a/src/components/NavSlot/NavSlot.css
+++ b/src/components/NavSlot/NavSlot.css
@@ -2,14 +2,15 @@
   @apply flex flex-col items-center w-min px-2 pb-2 overflow-hidden;
 }
 
-.navSlot:hover > .navSlot__flag--not-selected {
-  @apply animate-bounce translate-y-0;
-}
 .navSlot:hover > .navSlot__flag--not-selected > path {
   @apply text-neutral-100;
 }
+
 .navSlot:hover > .navSlot__icon {
-  @apply text-dark-500;
+  @apply text-dark-500 animate-bounce;
+}
+.navSlot:hover > .navSlot__icon--selected {
+  @apply text-dark-500 animate-none;
 }
 .navSlot:hover > .navSlot__icon--selected {
   @apply text-accent-500;
