--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,5 +1,5 @@
 .button {
-  @apply flex flex-row gap-2 px-4 py-2 justify-between w-max rounded-lg items-center focus:outline-none;
+  @apply flex flex-row gap-2 px-4 py-2 justify-between rounded-lg items-center focus:outline-none;
 }
 .button:disabled {
   @apply opacity-50 cursor-not-allowed;
