--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,11 +1,15 @@
 .button {
-  @apply flex flex-row gap-2 px-4 py-2 justify-between rounded-lg items-center focus:outline-none;
+  @apply flex flex-row gap-2 px-4 py-2 justify-between rounded-lg items-center focus:outline-none font-highlight uppercase font-bold;
 }
 .button:disabled {
   @apply opacity-50 cursor-not-allowed;
 }
 .button:disabled > * {
   @apply cursor-not-allowed;
+}
+
+.button__text {
+  @apply text-center w-full;
 }
 
 .button--loading {
