--- a/src/components/Offer/Offer.css
+++ b/src/components/Offer/Offer.css
@@ -22,6 +22,14 @@
   @apply h-0.5 rounded bg-medium-500;
 }
 
+.offer__details {
+  @apply flex flex-col gap-4 w-full;
+}
+
+.offer__map {
+  @apply relative rounded overflow-hidden w-full h-96;
+}
+
 .offer__user {
   display: grid;
   column-gap: 0.5rem;
@@ -52,19 +60,4 @@
 .offer__city {
   grid-area: offer-city;
   @apply text-medium-900 font-base font-bold text-xs text-right;
-}
-
-.offer__details {
-  width: calc(100vw - 5rem);
-  @apply flex flex-col gap-4;
-}
-
-.offer__map {
-  height: 28rem;
-  width: calc(100vw - 5rem);
-  @apply rounded overflow-hidden;
-}
-
-.mapboxgl-ctrl-attrib-inner {
-  @apply text-sm;
 }
