Updated offer schema. Added reserve modal

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,10 +1,8 @@
 .modal {
-  background-color: hsla(100, 1%, 46%, 0.3);
-  -webkit-backdrop-filter: blur(0.5rem);
-  backdrop-filter: blur(0.5rem);
-  @apply fixed flex items-center justify-center top-0 right-0 bottom-0 left-0;
+  background-color: hsla(100, 1%, 46%, 0.7);
+  @apply fixed flex items-center justify-center top-0 right-0 bottom-0 left-0 z-20;
 }
 
 .modal__card {
-  @apply w-max z-30 m-4;
+  @apply w-max z-10 m-4;
 }
