--- a/src/components/Stepper/Stepper.css
+++ b/src/components/Stepper/Stepper.css
@@ -5,6 +5,9 @@
 .stepper__control {
   @apply flex justify-center items-center p-2 rounded-full h-12 w-12 text-2xl text-medium-900 shadow bg-white hover:bg-primary-500 hover:text-white  focus:outline-none focus:ring-4 focus:ring-accent-200;
 }
+.stepper__control--disabled {
+  @apply opacity-50 cursor-not-allowed;
+}
 
 .stepper__value {
   @apply text-2xl font-bold font-base;
