--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -3,11 +3,16 @@
     0px 4px 4px -2px rgba(24, 39, 75, 0.08);
   @apply bg-white rounded-lg border border-neutral-100;
 }
-.card--padding {
-  @apply p-4;
-}
 .card:hover {
   box-shadow: 0px 4px 6px -4px rgba(24, 39, 75, 0.12),
     0px 8px 8px -4px rgba(24, 39, 75, 0.08);
   @apply border-neutral-200;
+}
+
+.card--clean {
+  @apply bg-transparent rounded-lg;
+}
+
+.card--padding {
+  @apply p-4;
 }
