Added create message component. Added new button size full. Added disabled prop in input.

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -9,7 +9,7 @@
 }
 
 .button__text {
-  @apply text-center w-full;
+  @apply w-full flex flex-row justify-center;
 }
 
 .button--loading {
@@ -33,6 +33,9 @@
 }
 .button--xs {
   @apply py-0.5 px-2 rounded;
+}
+.button--full {
+  @apply h-full w-full rounded;
 }
 
 .button--variant-primary {
