--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,38 +1,11 @@
 .App {
-  text-align: center;
+  @apply bg-medium-500;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App__content {
+  @apply min-h-screen flex flex-col items-center p-4 pb-36;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App__navigation {
+  @apply fixed bottom-8 px-4 w-full;
 }
