Created all routes

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,9 +10,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  @apply font-base text-medium-900;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.headline {
+  @apply font-highlight font-bold text-2xl text-medium-900;
 }
