--- a/src/views/Login/Login.css
+++ b/src/views/Login/Login.css
@@ -1,3 +1,12 @@
 .login-view {
-  @apply w-full flex flex-col;
+  @apply w-full flex flex-col gap-4;
+}
+
+.login-view__intro {
+  @apply w-full flex flex-col gap-4 items-center text-center;
+}
+
+.login-view__person {
+  height: 215px;
+  width: 157px;
 }
