--- a/src/views/Home/Home.css
+++ b/src/views/Home/Home.css
@@ -1,3 +1,7 @@
 .home-view {
-  @apply w-full flex flex-col;
+  @apply w-full flex flex-col gap-4;
+}
+
+.home-view__loading {
+  @apply flex flex-col gap-1 items-center font-bold;
 }
