--- a/src/views/Home/Home.css
+++ b/src/views/Home/Home.css
@@ -1,7 +1,7 @@
 .home-view {
-  @apply w-full flex flex-col gap-4;
+  @apply w-full min-w-full flex flex-col gap-8;
 }
 
 .home-view__loading {
-  @apply flex flex-col gap-1 items-center font-bold;
+  @apply flex flex-col gap-1 items-center text-center;
 }
