Fixed increasing covers to stay in shape add a certain size. added small animations and change theme color in the manifest

--- a/src/components/BookCard/BookCard.css
+++ b/src/components/BookCard/BookCard.css
@@ -2,5 +2,5 @@
   @apply flex flex-col gap-4 items-center break-words;
 }
 .book-card__cover  {
-  @apply bg-cover bg-center h-44 w-full rounded;
+  @apply bg-contain bg-no-repeat bg-center w-36 h-auto rounded;
 }
