--- a/src/views/Login/Login.css
+++ b/src/views/Login/Login.css
@@ -12,23 +12,23 @@
 }
 
 .animation-wink {
-  animation: wink 500ms ease 0 infinite;
+  animation: wink 500ms infinite;
 }
 
 @keyframes wink {
   0% {
-    transform: rotate(0);
+    transform: rotate(0deg);
   }
   25% {
-    transform: rotate(25);
+    transform: rotate(25deg);
   }
   50% {
-    transform: rotate(-25);
+    transform: rotate(-25deg);
   }
   75% {
-    transform: rotate(15);
+    transform: rotate(15deg);
   }
   100% {
-    transform: rotate(0);
+    transform: rotate(0deg);
   }
 }
